[gd_scene load_steps=18 format=3 uid="uid://duo1h603vpbjc"]

[ext_resource type="Script" path="res://scenes/FreeplayMenu.gd" id="1_fmw2k"]
[ext_resource type="Resource" uid="uid://rkmusgpraddm" path="res://assets/freeplaySongList.tres" id="2_c5rpj"]
[ext_resource type="PackedScene" uid="uid://bgilym2qsrs4y" path="res://scenes/fonts/Alphabet.tscn" id="3_476d5"]
[ext_resource type="Texture2D" uid="uid://ci0y4tb5p1jlp" path="res://assets/images/menus/freeplay/freeBG.png" id="3_sw8h1"]
[ext_resource type="Texture2D" uid="uid://bvafd1dvo4ke4" path="res://assets/images/gameplay/icons/icon-bf.png" id="4_7vmig"]
[ext_resource type="Texture2D" uid="uid://bp6vjrko5h15c" path="res://assets/images/menus/checker.png" id="4_xyqg7"]
[ext_resource type="Texture2D" uid="uid://dob0auwinoq33" path="res://assets/images/menus/freeplay/Free_Bottom.png" id="5_gff00"]
[ext_resource type="Script" path="res://scripts/FreeplayAlphabet.gd" id="5_x5jdf"]
[ext_resource type="Script" path="res://scripts/HealthIcon.gd" id="5_y3j5c"]
[ext_resource type="FontFile" uid="uid://coqcg7h14duny" path="res://assets/fonts/vcr.ttf" id="8_rgyml"]
[ext_resource type="Theme" uid="uid://br6hapg0jupnv" path="res://assets/styles/nova_purple_panel.tres" id="9_l28b6"]
[ext_resource type="Theme" uid="uid://c7bhikvxte264" path="res://assets/styles/nova_purple.tres" id="10_8grtk"]
[ext_resource type="SpriteFrames" uid="uid://cw16u0arrijy7" path="res://assets/images/menus/storymenu/difficulties/difficulties.res" id="11_cow1i"]
[ext_resource type="Script" path="res://scenes/options/Display Slider Optionless.gd" id="11_g1sif"]
[ext_resource type="SpriteFrames" path="res://assets/images/menus/freeplay/Freeplay_Discs.res" id="12_0ildq"]

[sub_resource type="Gradient" id="Gradient_d6ckc"]
offsets = PackedFloat32Array(0, 0.49505, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0.741176, 0.972549, 0.333333, 1, 0.992157, 0.952941, 0.666667)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gm6e1"]
gradient = SubResource("Gradient_d6ckc")
width = 512

[node name="FreeplayMenu" type="Node2D"]
script = ExtResource("1_fmw2k")
song_list = ExtResource("2_c5rpj")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_sw8h1")

[node name="Gradient" type="Sprite2D" parent="."]
position = Vector2(640.001, 464)
rotation = 1.5708
scale = Vector2(1, 1280)
texture = SubResource("GradientTexture1D_gm6e1")

[node name="CheckerPattern" type="TextureRect" parent="."]
modulate = Color(0.352941, 0.882353, 0.662745, 1)
offset_left = 0.000976563
offset_right = 2860.0
offset_bottom = 1660.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_xyqg7")
stretch_mode = 1

[node name="FreeBottom" type="Sprite2D" parent="."]
position = Vector2(640, 850)
texture = ExtResource("5_gff00")

[node name="ScoreText" type="Label" parent="FreeBottom"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -851.0
offset_top = -68.0
offset_right = 429.0
offset_bottom = -36.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("8_rgyml")
theme_override_font_sizes/font_size = 32
text = "dubba"
horizontal_alignment = 1

[node name="DiffSprite" type="AnimatedSprite2D" parent="FreeBottom"]
texture_filter = 1
position = Vector2(0, 1)
sprite_frames = ExtResource("11_cow1i")
animation = &"NORMAL"

[node name="__TemplateSong__" parent="." instance=ExtResource("3_476d5")]
visible = false
custom_minimum_size = Vector2(371, 70)
offset_right = 371.0
script = ExtResource("5_x5jdf")
is_template = true
text = "Template"

[node name="Songs" type="CanvasGroup" parent="."]

[node name="Disc" type="AnimatedSprite2D" parent="."]
position = Vector2(-45, 885)
scale = Vector2(1e-05, 1)
sprite_frames = ExtResource("12_0ildq")
animation = &"agoti"

[node name="DiscIcon" type="Sprite2D" parent="Disc"]
texture = ExtResource("4_7vmig")
hframes = 2
script = ExtResource("5_y3j5c")

[node name="SongTracks" type="Node" parent="."]

[node name="GameplayModifiers" type="Panel" parent="."]
visible = false
offset_left = 372.0
offset_top = 220.0
offset_right = 908.0
offset_bottom = 500.0
theme = ExtResource("9_l28b6")

[node name="Control" type="Control" parent="GameplayModifiers"]
anchors_preset = 0
offset_right = 537.0
offset_bottom = 281.0
theme = ExtResource("10_8grtk")

[node name="Playback Rate" type="HSlider" parent="GameplayModifiers/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 26.0
offset_right = 527.0
offset_bottom = 42.0
tooltip_text = "Adjusts how early/late notes spawn during gameplay.
Negative means early and positive means late.
Useful for bluetooth headphones or something."
theme = ExtResource("10_8grtk")
min_value = 0.5
max_value = 3.0
step = 0.05
value = 1.0
script = ExtResource("11_g1sif")
decimals = 2

[node name="Title" type="Label" parent="GameplayModifiers/Control/Playback Rate"]
layout_mode = 0
offset_top = -20.0
offset_right = 90.0
offset_bottom = 6.0
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "Playback Rate"

[node name="Display" type="Label" parent="GameplayModifiers/Control/Playback Rate"]
layout_mode = 0
offset_left = 449.0
offset_top = -20.0
offset_right = 514.0
offset_bottom = 6.0
text = "1"
horizontal_alignment = 2

[node name="Health Gain Mult" type="HSlider" parent="GameplayModifiers/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 66.0
offset_right = 527.0
offset_bottom = 82.0
tooltip_text = "Adjusts how early/late notes spawn during gameplay.
Negative means early and positive means late.
Useful for bluetooth headphones or something."
theme = ExtResource("10_8grtk")
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0
script = ExtResource("11_g1sif")
decimals = 1

[node name="Title" type="Label" parent="GameplayModifiers/Control/Health Gain Mult"]
layout_mode = 0
offset_top = -20.0
offset_right = 90.0
offset_bottom = 6.0
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "Health Gain Mult"

[node name="Display" type="Label" parent="GameplayModifiers/Control/Health Gain Mult"]
layout_mode = 0
offset_left = 449.0
offset_top = -20.0
offset_right = 514.0
offset_bottom = 6.0
text = "1"
horizontal_alignment = 2

[node name="Health Loss Mult" type="HSlider" parent="GameplayModifiers/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 106.0
offset_right = 527.0
offset_bottom = 122.0
tooltip_text = "Adjusts how early/late notes spawn during gameplay.
Negative means early and positive means late.
Useful for bluetooth headphones or something."
theme = ExtResource("10_8grtk")
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0
script = ExtResource("11_g1sif")
decimals = 1

[node name="Title" type="Label" parent="GameplayModifiers/Control/Health Loss Mult"]
layout_mode = 0
offset_top = -20.0
offset_right = 90.0
offset_bottom = 6.0
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "Health Loss Mult"

[node name="Display" type="Label" parent="GameplayModifiers/Control/Health Loss Mult"]
layout_mode = 0
offset_left = 449.0
offset_top = -20.0
offset_right = 514.0
offset_bottom = 6.0
text = "1"
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -238.0
offset_top = -115.0
offset_right = 1636.0
offset_bottom = 1033.0
color = Color(0, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)
zoom = Vector2(0.6, 0.6)

[connection signal="value_changed" from="GameplayModifiers/Control/Playback Rate" to="GameplayModifiers/Control/Playback Rate" method="_on_value_changed"]
[connection signal="value_changed" from="GameplayModifiers/Control/Health Gain Mult" to="GameplayModifiers/Control/Health Gain Mult" method="_on_value_changed"]
[connection signal="value_changed" from="GameplayModifiers/Control/Health Loss Mult" to="GameplayModifiers/Control/Health Loss Mult" method="_on_value_changed"]
